--- a/index.html
+++ b/index.html
@@ -3,52 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Claw Study Command Centre 🦞</title>
+    <title>Arran's Command Centre 🦞</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body { background-color: #0f172a; color: #f8fafc; }
-        .card { background-color: #1e293b; border-radius: 0.75rem; padding: 1.5rem; }
+        body { background-color: #0f172a; color: #f8fafc; font-family: 'Inter', sans-serif; }
+        .column { background-color: #1e293b; border-radius: 0.75rem; padding: 1.25rem; min-height: 400px; }
+        .task-card { background-color: #334155; border-radius: 0.5rem; padding: 1rem; margin-bottom: 0.75rem; border-left: 4px solid #38bdf8; }
+        .important { border-left-color: #ef4444; }
+        .uni { border-left-color: #10b981; }
+        .reselling { border-left-color: #f59e0b; }
+        .life { border-left-color: #8b5cf6; }
     </style>
 </head>
 <body class="p-4 md:p-8">
-    <header class="flex justify-between items-center mb-8 border-b border-slate-700 pb-4">
+    <header class="flex justify-between items-center mb-10 border-b border-slate-700 pb-6">
         <div>
-            <h1 class="text-2xl font-bold text-sky-400">Claw Dashboard 🦞</h1>
-            <p class="text-slate-400">Welcome back, Arran.</p>
+            <h1 class="text-3xl font-bold text-sky-400">Command Centre 🦞</h1>
+            <p class="text-slate-400">Operational Hub for Arran</p>
+        </div>
+        <div class="text-right hidden md:block">
+            <div class="text-sm text-slate-500 uppercase tracking-wider font-semibold">System Status</div>
+            <div class="text-emerald-400 font-medium">Claw Online</div>
         </div>
     </header>
 
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-        <div class="lg:col-span-2 space-y-6">
-            <section class="card">
-                <h2 class="text-xl font-semibold mb-4 flex items-center gap-2">📚 Active Modules</h2>
-                <div id="tasks-list" class="space-y-3">
-                    <!-- Tasks will be injected here -->
-                    <div class="bg-slate-700 p-4 rounded-lg flex justify-between items-center border-l-4 border-emerald-500">
-                        <div>
-                            <div class="font-medium">EFIM10030 Lecture 3b: Revenue Recognition</div>
-                            <div class="text-xs text-slate-400 uppercase">Briefing & Worksheet</div>
-                        </div>
-                        <span class="text-xs bg-slate-900 px-2 py-1 rounded-full text-emerald-400">Completed</span>
-                    </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <!-- IMPORTANT COLUMN -->
+        <div class="column">
+            <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-red-400">🔥 IMPORTANT</h2>
+            <div id="col-important" class="space-y-3">
+                <div class="task-card important">
+                    <div class="font-semibold text-sm">Welcome to your Hub</div>
+                    <div class="text-xs text-slate-400 mt-1">High priority tasks appear here.</div>
                 </div>
-            </section>
+            </div>
         </div>
 
-        <aside class="space-y-6">
-            <section class="card">
-                <h2 class="text-lg font-semibold mb-3">⚡ Quick Actions</h2>
-                <button onclick="alert('Send files to Claw on WhatsApp to process!')" class="w-full bg-sky-600 hover:bg-sky-500 py-2 rounded font-medium transition">Add New Task</button>
-            </section>
-            
-            <section class="card">
-                <h2 class="text-lg font-semibold mb-3">🕒 Recent Activity</h2>
-                <ul class="text-sm text-slate-400 space-y-2">
-                    <li class="border-b border-slate-700 pb-2">Completed EFIM10030 Worksheet</li>
-                    <li>Identity initialized: Claw 🦞</li>
-                </ul>
-            </section>
-        </aside>
+        <!-- UNI COLUMN -->
+        <div class="column">
+            <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-emerald-400">🎓 UNI</h2>
+            <div id="col-uni" class="space-y-3">
+                <div class="task-card uni">
+                    <div class="font-semibold text-sm text-emerald-100">EFIM10030: Lecture 3b</div>
+                    <div class="text-xs text-slate-400 mt-1">Worksheet Deep-Filled & Sent.</div>
+                    <div class="mt-2 inline-block px-2 py-0.5 bg-emerald-900/50 text-emerald-400 text-[10px] rounded uppercase font-bold">Done</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- RESELLING COLUMN -->
+        <div class="column">
+            <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-amber-400">💰 RESELLING</h2>
+            <div id="col-reselling" class="space-y-3">
+                <p class="text-xs text-slate-500 italic">No active inventory tasks.</p>
+            </div>
+        </div>
+
+        <!-- LIFE ADMIN COLUMN -->
+        <div class="column">
+            <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-purple-400">🏠 LIFE ADMIN</h2>
+            <div id="col-life" class="space-y-3">
+                <p class="text-xs text-slate-500 italic">All quiet on the admin front.</p>
+            </div>
+        </div>
     </div>
+
+    <footer class="mt-12 pt-6 border-t border-slate-800 text-center text-slate-500 text-xs">
+        Updated by Claw 🦞 | 2026-02-05
+    </footer>
 </body>
 </html>
