Add Contract Analysis task to Reselling column

--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
         <!-- RESELLING -->
         <div class="column">
             <h2 class="text-lg font-bold mb-4 flex items-center gap-2 text-amber-400">💰 RESELLING</h2>
-            <div id="col-reselling" class="flex-grow space-y-3 text-center py-10">
-                <p class="text-xs text-slate-500 italic">Tap below to add inventory.</p>
+            <div id="col-reselling" class="flex-grow space-y-3">
+                <div class="task-card reselling">
+                    <div class="font-semibold text-sm text-amber-100">Client Contract Analysis</div>
+                    <div class="text-xs text-slate-400 mt-1">Waiting for file drop.</div>
+                    <div class="mt-2 inline-block px-2 py-0.5 bg-amber-900/50 text-amber-400 text-[10px] rounded uppercase font-bold">In Progress</div>
+                </div>
             </div>
             <a href="https://wa.me/447462552695?text=Reselling%20Task:%20" class="add-btn text-center mt-4">+ Add Reselling Task</a>
         </div>
